Исправлена инициализация списка разделителей и математических функций с Arrays.asList на List.of Исправлены импорты